reduced h2 size on mobile to prevent horizontal overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ p {
 
 @media only screen and (max-width: 550px) {
 	h2 {
-		font-size: 4.5rem;
+		font-size: 3.5rem;
 	}
 
 	p {
